-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.9.0
-
None
-
openSUSE Tumbleweed
-
-
70e75851b (dev), 5a8637e45 (6.10.0), dd3d2bb92 (dev), 7f151d8c8 (6.10)
When creating new C++ class and starting typing the name of a custom base class (e.g. "QS" for QStyledItemDelegate), Qt Creator crashes with following error:
xdg_surface#64: error 2: the surface already has a role assigned xdg_popup The Wayland connection experienced a fatal error: Protocol error
openSUSE Tumblweed
KDE Plasma Wayland 6.3.4
Qt 6.9.0
Qt Creator 16.0.1 from openSUSE repos
I attached output of running Qt Creator with WAYLAND_DEBUG=1 environment variable, from the moment of opening dialog for creation of C++ file.
With official Qt Creator 16.0.1 build (which uses Qt 6.8.3 BTW) the crash is not reproducible, but the autocompletion popup for base class text field is displayed in the center of the screen with its own window decorations.
- is duplicated by
-
QTBUG-136343 [REG Qt 6.9] Wayland: QCompleter popup closes application with protocol error
-
- Closed
-
- relates to
-
QTBUG-136588 Qt Creator crashes in the debugging mode on Wayland
-
- Closed
-
-
QTCREATORBUG-32858 C++ class wizard autocomplete widget misplaced, crashing in Qt6.9/Wayland
-
- Closed
-
-
QTBUG-137702 [REG Qt 6.9.0 -> 6.9.1] Crash when completing code
-
- Closed
-
For Gerrit Dashboard: QTBUG-136110 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
641702,1 | WIP tests: Create failing test for popup role switching | dev | qt/qtwayland | Status: ABANDONED | -2 | 0 |
641897,2 | Reset surface on QWindow type change | dev | qt/qtwayland | Status: ABANDONED | -2 | 0 |
645745,3 | wayland: Reset surface on QWindow type change | dev | qt/qtbase | Status: MERGED | +2 | 0 |
680871,5 | wayland: Fix opaque background on client side decorations | 6.10.0 | qt/qtbase | Status: ABANDONED | +1 | +1 |
681152,2 | wayland: Fix opaque backgrounds on client side decorations | 6.10.0 | qt/qtbase | Status: MERGED | +2 | +1 |
681311,2 | wayland: Fix opaque backgrounds on client side decorations | dev | qt/qtbase | Status: MERGED | +2 | 0 |
681350,2 | wayland: Fix opaque backgrounds on client side decorations | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |